[package]
name = "wormhole"
version = "0.1.0"
authors = ["James Taylor <jamestaylor3@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { version = "0.4", features = ["std"] }
nom = "6.0"
num-traits = "0.2"

quiche = "0.7"
mio = "0.6"
url = "1"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

ring = "0.16"
x25519-dalek = "1"
hex = "0.4"
aes-gcm = "0.8"
rand_core = "0.5"